<resources>
    <string name="app_name">Spelling Game</string>
    <string name="beginText">Begin!</string>
    <string name="timeLeftText">Time left:</string>

    <string name="radioCorrect">Correct</string>
    <string name="radioSkip">Skip</string>
    <string name="radioIncorrect">Incorrect</string>
    <string name="submitText">Submit!</string>
    <string name="wordsCorrectText">Words correct: </string>
    <string name="startAgainButton">Start Again!</string>
</resources>
