<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/timeLeftText"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:text="@string/timeLeftText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/timerText"
        app:layout_constraintEnd_toStartOf="@+id/timerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timerText" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="148dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordText"
        android:layout_width="316dp"
        android:layout_height="34dp"
        android:layout_marginTop="124dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />

    <RadioGroup
        android:id="@+id/answerChoices"
        android:layout_width="243dp"
        android:layout_height="224dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordText"
        app:layout_constraintVertical_bias="0.337">

        <RadioButton
            android:id="@+id/radioCorrectSelection"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/radioCorrect"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioSkipSelection"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:checked="true"
            android:text="@string/radioSkip"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioIncorrectSelection"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/radioIncorrect"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/submitAnswer"
        android:layout_width="240dp"
        android:layout_height="68dp"
        android:layout_marginBottom="92dp"
        android:text="@string/submitText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/answerChoices"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/answerChoices" />

    <TextView
        android:id="@+id/wordsToGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/timeLeftText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordsCorrectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wordsCorrectText"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/submitAnswer"
        app:layout_constraintTop_toBottomOf="@+id/submitAnswer" />

    <TextView
        android:id="@+id/wordsCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="0/20"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toEndOf="@+id/wordsCorrectText"
        app:layout_constraintTop_toBottomOf="@+id/submitAnswer"
        app:layout_constraintVertical_bias="0.507" />

</androidx.constraintlayout.widget.ConstraintLayout>